重新整理结构